--- a/components/layout/Header.module.scss
+++ b/components/layout/Header.module.scss
@@ -17,13 +17,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: white;
     font-weight: bold;
     padding-left: 2rem;
     p {
       padding-left: 1rem;
     }
+  }
+
+  nav {
+    flex-grow: 5;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
 
   ul {
@@ -41,12 +48,24 @@
 
   a {
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: white;
 
     &:hover,
     &:active,
     &.active {
+      color: #fcb8d2;
+    }
+  }
+
+  button {
+    font: inherit;
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+    &:hover {
       color: #fcb8d2;
     }
   }
