--- a/components/layout/Header.module.scss
+++ b/components/layout/Header.module.scss
@@ -57,6 +57,19 @@
       color: #fcb8d2;
     }
   }
+
+  .button {
+    font: inherit;
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+    &:hover {
+      color: #fcb8d2;
+    }
+  }
+
 }
 
 
